--- a/frontend/issueTracker/package.json
+++ b/frontend/issueTracker/package.json
@@ -19,7 +19,14 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
-    "rxjs": "~6.4.0",
+    "@nguniversal/express-engine": "^8.2.6",
+    "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.4.1",
+    "ngx-cookie": "^4.1.2",
+    "ngx-toastr": "^11.3.2",
+    "rxjs": "^6.4.0",
+    "socket.io-client": "^2.3.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
