coded dashboard, search, issue description components

--- a/frontend/issueTracker/package.json
+++ b/frontend/issueTracker/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@nguniversal/express-engine": "^8.2.6",
+    "@popperjs/core": "^2.0.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ng-quill": "^4.5.3",
     "ngx-cookie": "^4.1.2",
     "ngx-toastr": "^11.3.2",
     "rxjs": "^6.4.0",
