--- a/frontend/issueTracker/angular.json
+++ b/frontend/issueTracker/angular.json
@@ -31,7 +31,9 @@
             ],
             "scripts": [
               "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/@popperjs/core/dist/umd/popper.min.js",
               "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+              
             ]
           },
           "configurations": {
