--- a/frontend/issueTracker/package.json
+++ b/frontend/issueTracker/package.json
@@ -26,6 +26,7 @@
     "jquery": "^3.4.1",
     "ng-quill": "^4.5.3",
     "ngx-cookie": "^4.1.2",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^11.3.2",
     "rxjs": "^6.4.0",
     "socket.io-client": "^2.3.0",
